# ironlayer_oss

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CLAUDE.md  Cargo.toml  LESSONS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.cargo/: config.toml
ai_engine/: pyproject.toml
ai_engine/ai_engine/: config.py  main.py  middleware.py
ai_engine/ai_engine/engines/: budget_guard.py  cost_predictor.py  in_memory_usage_repo.py  llm_client.py  semantic_classifier.py  sql_optimizer.py  suggestion_validator.py
ai_engine/ai_engine/evaluation/: harness.py
ai_engine/ai_engine/ml/: model_registry.py
ai_engine/ai_engine/routers/: cache.py  cost.py  fragility.py  optimize.py  predictions.py  risk.py  semantic.py
ai_engine/tests/: conftest.py  test_app_lifecycle.py  test_budget_guard.py  test_cache.py  test_config_validation.py  test_cost_anomaly.py  test_cost_forecaster.py  test_cost_predictor.py  test_evaluation_harness.py  test_failure_predictor.py  test_fragility_scorer.py  test_gold_dataset_regression.py  test_model_registry.py  test_pii_scrubber.py  test_prompt_registry.py  test_risk_scorer.py  test_routers.py  test_semantic_classifier.py  test_sql_optimizer.py  test_suggestion_validator.py
api/: .env.example  pyproject.toml
api/api/: config.py  dependencies.py  http_errors.py  main.py  pagination.py  schemas.py  security.py  test_utils.py  validation.py
api/api/middleware/: auth.py  body_limit.py  csp.py  login_rate_limiter.py  metering.py  prometheus.py  rate_limit.py
api/api/routers/: admin_analytics.py  approvals.py  audit.py  auth.py  backfills.py  billing.py  customer_health.py  environments.py  event_subscriptions.py  frontend_errors.py  health.py  models.py  plans.py  reconciliation.py  reports.py  runs.py  team.py  tenant_config.py  tests.py  usage.py  webhooks.py
api/api/services/: ai_client.py  audit_service.py  auth_service.py  billing_service.py  event_bus.py  execution_service.py  github_webhook_service.py  plan_service.py  quota_service.py  redis_client.py  simulation_service.py  test_service.py
api/tests/: conftest.py  test_ai_feedback_service.py  test_audit_retention.py  test_auth_router.py  test_auth_service.py  test_auto_approval.py  test_backfill_checkpoint.py  test_billing_router.py  test_billing_service.py  test_config_validation.py  test_customer_health_router.py  test_customer_health_service.py  test_environment_router.py  test_environment_service.py  test_event_bus.py  test_event_subscription_router.py  test_execution_service.py  test_feature_gates.py  test_github_webhook_router.py  test_github_webhook_service.py  test_health_router.py  test_input_validation.py  test_invoice_service.py  test_metering_middleware.py  test_metering_wiring.py  test_models_router.py  test_plan_cache.py  test_plan_contracts.py  test_plan_service.py  test_plans_router.py  test_prometheus_middleware.py  test_quota_enforcement.py  test_rate_limit.py  test_rbac.py  test_rbac_comprehensive.py  test_reconciliation.py  test_reconciliation_scheduler.py  test_report_export.py  test_reporting_service.py  test_reports_router.py  (+15 more)
api/tests/integration/: test_tenant_isolation.py
api/tests/middleware/: test_login_rate_limiter.py
check_engine/: Cargo.toml  pyproject.toml
check_engine/benches/: check_benchmark.rs
check_engine/src/: cache.rs  config.rs  discovery.rs  engine.rs  lib.rs  pyo3_bindings.rs  reporter.rs  sql_lexer.rs  types.rs
check_engine/src/checkers/: databricks_sql.rs  dbt_project.rs  incremental_logic.rs  mod.rs  model_consistency.rs  naming.rs  performance.rs  ref_resolver.rs  sql_header.rs  sql_safety.rs  sql_syntax.rs  test_adequacy.rs  yaml_schema.rs
cli/: pyproject.toml
cli/cli/: app.py  cloud.py  display.py  helpers.py  state.py
cli/cli/commands/: apply.py  auth.py  backfill.py  check.py  dev.py  lineage.py  mcp.py  migrate.py  models.py  plan.py  show.py
cli/cli/mcp/: server.py  tools.py
cli/tests/: test_auth_commands.py  test_cli.py  test_cloud.py  test_dev.py  test_display.py  test_edge_cases.py  test_init.py  test_mcp_tools.py  test_migrate.py  test_migrate_sqlmesh.py
core_engine/: ironlayer_check_engine.pyi  pyproject.toml
core_engine/core_engine/: config.py
core_engine/core_engine/benchmarks/: graph_generator.py  profiler.py
core_engine/core_engine/checks/: __init__.py  base.py  engine.py  models.py  registry.py
core_engine/core_engine/checks/builtin/: __init__.py  model_tests.py  schema_contracts.py
core_engine/core_engine/executor/: local_executor.py
core_engine/core_engine/graph/: column_lineage.py
core_engine/core_engine/metering/: collector.py
core_engine/core_engine/parser/: ast_parser.py
core_engine/core_engine/planner/: interval_planner.py
core_engine/core_engine/simulation/: impact_analyzer.py
core_engine/core_engine/sql_toolkit/: _factory.py  _protocols.py  _types.py
core_engine/core_engine/state/: _repository_utils.py  plan_repository.py  repository.py  run_repository.py  tables.py
core_engine/tests/: conftest.py
core_engine/tests/benchmark/: test_performance_benchmarks.py
core_engine/tests/e2e/: test_full_pipeline.py
core_engine/tests/integration/: test_planner_determinism.py
core_engine/tests/unit/: test_ast_diff.py  test_ast_parser.py  test_audit_repository.py  test_backfill_repository.py  test_check_engine.py  test_cluster_templates.py  test_column_lineage.py  test_config.py  test_contract_parsing.py  test_dag_builder.py  test_determinism_comprehensive.py  test_feature_flags.py  test_impact_analyzer.py  test_interval_planner.py  test_license_manager.py  test_metering.py  test_model_loader.py  test_normalizer.py  test_plan_serializer.py  test_profiling.py  test_qualifier.py  test_ref_resolver.py  test_repository.py  test_repository_coverage.py  test_retry.py  test_schema_introspector.py  test_schema_validator.py  test_sql_guard.py  test_sql_injection.py  test_sql_rewriter.py  test_sqlite_adapter.py  test_sqlmesh_loader.py  test_structural_diff.py  test_telemetry.py  test_test_parsing.py  test_test_runner.py  test_usage_events_indexes.py
(+73 files in other folders)
