[project]
name = "ironlayer-api"
version = "0.1.0"
description = "IronLayer API Control Plane"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
authors = [{name = "IronLayer Team"}]
dependencies = [
    "fastapi>=0.109,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic[email]>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "httpx>=0.27,<1.0",
    "stripe>=8.0,<10.0",
    "prometheus-client>=0.20,<1.0",
    "bcrypt>=4.1,<5.0",
    "PyJWT>=2.8,<3.0",
    "ironlayer-core",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.2",
    "mypy>=1.8",
    "ai-engine",
]

[tool.uv.sources]
ironlayer-core = { workspace = true }
ai-engine = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=api --cov-report=term-missing"

[tool.ruff.lint]
# F821: undefined name — catches NameError issues like missing imports (BL-038).
extend-select = ["F821"]
