[project]
name = "ironlayer"
version = "0.2.0"
description = "IronLayer CLI — AI-native Databricks transformation control plane"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
readme = "README.md"
authors = [{name = "IronLayer Team"}]
keywords = ["sql", "databricks", "data-engineering", "transformations", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "typer>=0.9,<1.0",
    "rich>=13.0,<14.0",
    "httpx>=0.27,<1.0",
    "jinja2>=3.1,<4.0",
    # Workspace resolves to local core_engine; CI publish swaps to: ironlayer-core>=0.2.0
    "ironlayer-core",
]

[project.optional-dependencies]
# MCP support — install with: pip install ironlayer[mcp]
mcp = ["mcp>=1.0,<2.0", "starlette>=0.27,<1.0", "uvicorn>=0.27,<1.0"]

[project.scripts]
ironlayer = "cli.__main__:main"

[project.urls]
Homepage = "https://ironlayer.app"
Repository = "https://github.com/ironlayer/ironlayer"
Documentation = "https://docs.ironlayer.app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
]

[tool.uv.sources]
ironlayer-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=cli --cov-report=term-missing"
