[project]
name = "ironlayer-core"
version = "0.2.0"
description = "IronLayer Core Engine — deterministic SQL transformation planning and execution"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
readme = "README.md"
authors = [{name = "IronLayer Team"}]
keywords = ["sql", "databricks", "data-engineering", "transformations", "incremental"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlglot==25.34.1",  # Pinned: last MIT-licensed version before Fivetran acquisition risk
    "networkx>=3.2,<4.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    "asyncpg>=0.29,<1.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "duckdb>=1.1,<2.0",
    "databricks-sdk>=0.30,<1.0",
    "rich>=13.0,<14.0",
    "cryptography>=46.0.5,<47.0",
    "aiosqlite>=0.20,<1.0",
    "pyyaml>=6.0,<7.0",
]

[project.urls]
Homepage = "https://ironlayer.app"
Repository = "https://github.com/ironlayer/ironlayer"
Documentation = "https://docs.ironlayer.app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.2",
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core_engine"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=core_engine --cov-report=term-missing"
